name:                ageOf
version:             0.1.0
license:             GPL-3
license-file:        LICENSE
author:              Benjamin Barenblat
maintainer:          benjamin@barenblat.name
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable ageOf
  main-is:             Main.hs
  other-modules:       DBpedia
                     , RequestMethod
                     , SamplePlugin
  ghc-options:         -Wall
  build-depends:       base ==4.5.*
                     , current-locale ==0.*
                     , hsparql ==0.2.*
                     , old-locale ==1.*
                     , rdf4h ==1.1.*
                     , text ==0.11.*
                     , time ==1.4.*


-- Local Variables:
-- mode: Haskell-Cabal
-- fill-column: 70
-- indent-tabs-mode: nil
-- End:
